# mosesdecoder

./: Makefile.am  configure.in  moses.sln
CreateOnDisk/: CreateOnDisk.vcxproj
CreateOnDisk/src/: Makefile.am
cmph/src/: Makefile  Makefile.am  Makefile.in
kenlm/: Makefile.am  build_binary.vcxproj  kenlm.sln  kenlm.vcxproj  query.vcxproj
kenlm/lm/: bhiksha.cc  bhiksha.hh  binary_format.cc  binary_format.hh  blank.hh  build_binary.cc  config.hh  left_test.cc  model.hh  model_test.cc  ngram_query.cc  quantize.cc  quantize.hh  read_arpa.cc  return.hh  search_hashed.cc  search_trie.cc  search_trie.hh  sri.cc  sri.hh  sri_test.cc  trie.hh  trie_sort.hh  vocab.cc  vocab.hh
kenlm/util/: bit_packing.hh  bit_packing_test.cc  exception.cc  exception.hh  file.cc  file.hh  file_piece.cc  file_piece.hh  file_piece_test.cc  getopt.c  getopt.h  have.hh  joint_sort_test.cc  key_value_packing.hh  key_value_packing_test.cc  mmap.cc  mmap.hh  murmur_hash.hh  portability.cc  portability.hh  probing_hash_table_test.cc  sized_iterator.hh  sorted_uniform.hh  sorted_uniform_test.cc  string_piece.cc  string_piece.cpp  string_piece.hh
misc/: Makefile.am  processLexicalTable.vcxproj  processLexicalTableHashed.cpp  processPhraseTable.vcxproj  processPhraseTableHashed.cpp
moses/: moses.vcxproj
moses-chart-cmd/: moses-chart-cmd.vcxproj
moses-chart-cmd/src/: Makefile.am
moses-cmd/: moses-cmd.vcxproj
moses-cmd/src/: IOWrapper.cpp  Main.cpp  Makefile.am
moses/src/: CmphStringVectorAdapter.h  FactorCollection.h  GenerationDictionary.cpp  GenerationDictionary.h  HashIndex.h  Huffman.h  Hufftree.h  LanguageModel.cpp  LanguageModel.h  LanguageModelKen.cpp  LanguageModelKen.h  LexicalReordering.cpp  LexicalReordering.h  LexicalReorderingTable.cpp  LexicalReorderingTable.h  ListCoders.h  Makefile.am  MmapAllocator.h  MonotonicVector.h  Parameter.cpp  Parameter.h  PhraseCoder.h  PhraseDictionary.cpp  PhraseDictionary.h  PhraseDictionaryMemoryHashed.cpp  PhraseDictionaryMemoryHashed.h  ScoreIndexManager.cpp  ScoreIndexManager.h  Sentence.cpp  Sentence.h  StaticData.cpp  StaticData.h  StringVector.h  (+3 more)
server/: mosesserver.cpp
(+25 files in other folders)
